ircv3_parse_derive/tests/ui/de/fail/struct_unknown_attribute.stderr
error: unknown `#[irc]` attribute `cmd`
 --> tests/ui/de/fail/struct_unknown_attribute.rs:4:7
  |
4 | #[irc(cmd = "PrivMsg")]
  |       ^^^
